Update java-performance.md